--- a/Tutorial/DLPFC.ipynb
+++ b/Tutorial/DLPFC.ipynb
@@ -5,7 +5,9 @@
    "id": "fabea9d4",
    "metadata": {},
    "source": [
-    "### **Tutorial :DLPFC**"
+    "### **Tutorial :DLPFC**\n",
+    "\n",
+    "This experiment demonstrates the application of SpatialModal, a multi-modal deep learning framework, to the human Dorsolateral Prefrontal Cortex (DLPFC) dataset. The DLPFC dataset is a widely used benchmark in spatial transcriptomics, consisting of 12 tissue slices sequenced using the 10x Visium platform. To illustrate the workflow, we use Slice 151674 as a representative example."
    ]
   },
   {
@@ -254,14 +256,6 @@
     "plt.tight_layout() # Optimize spacing between plots\n",
     "plt.show()\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7d66b34e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
