--- a/Tutorial/MTG.ipynb
+++ b/Tutorial/MTG.ipynb
@@ -5,7 +5,9 @@
    "id": "c9b0b5bb",
    "metadata": {},
    "source": [
-    "### **Tutorial:MTG**"
+    "### **Tutorial:MTG**\n",
+    "\n",
+    "This experiment utilizes the human Middle Temporal Gyrus (MTG) dataset, which includes spatial transcriptomics data from both donors with Alzheimer's Disease (AD) and cognitively normal controls. In this tutorial, we use the normal sample as a representative example to demonstrate SpatialModal's capability to accurately identify cortical layers and characterize the spatial organization of the healthy brain."
    ]
   },
   {
@@ -78,7 +80,7 @@
     "stage = '2-5'\n",
     "fold = f\"../Data/MTG/{stage}\"\n",
     "adata = load_ST_file(fold)\n",
-    "truth = pd.read_csv(\"/home/zhaodongmin/SpatialModal/data/人类前额叶皮层/metadata.csv\", index_col=0)\n",
+    "truth = pd.read_csv(\"../Data/MTG//metadata.csv\", index_col=0)\n",
     "truth = truth[truth['patientID']=='2_5']\n",
     "adata.obs['region'] = truth['Layer'].to_numpy()\n",
     "adata.obs['region'] = adata.obs['region'].astype('category')\n",
@@ -124,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "1dfcf335",
    "metadata": {},
    "outputs": [
